--- a/index.html
+++ b/index.html
@@ -45,5 +45,55 @@
             <img src="files/much-img.png" alt="Bigode">
         </div>
     </section>
+
+    <section class="about">
+        <div class="container">
+            <div class="timing">
+                
+                <div class="overlay">
+                    <img src="files/classic-cut.png" alt="classic cut" class="icon-cut">
+                    <h3>Horários</h3>
+
+                    <div class="text">
+                        <h4>Segunda-feira à Sexta-feira</h4>
+                        <span>09:00 AM - 17:00 PM</span>
+                    </div>
+
+                    <div class="text">
+                        <h4>Sábado</h4>
+                        <span>09:00 AM - 14:00 PM</span>
+                    </div>
+
+                    <div class="text">
+                        <h4>Domingo</h4>
+                        <span>Fechado</span>
+                    </div>
+
+                    <br>
+                    <img src="files/loc-ic.png" alt="Localização">
+                    <span>Rua da Matrix, 68</span>
+
+                    <br>
+                    <img src="files/phone-ic.png" alt="Localização">
+                    <span>(11) 9999-9999</span>
+                </div>
+            </div>
+            <div class="experience">
+                <span>Uma história única</span>
+                <h2>52 anos de experiência</h2>
+
+                <div class="text">
+                    <div>
+                        <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste, placeat deserunt autem dignissimos provident assumenda soluta ad animi quo cumque eum, sint aliquam obcaecati, voluptatibus ipsa! Quam est consequuntur hic. <br><br> </p>
+
+                        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. In, reiciendis sed cupiditate beatae alias minima rem molestias dolore error aliquid, ex deserunt omnis eos qui distinctio praesentium eveniet voluptas temporibus! <br><br> </p>
+
+                        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. In, reiciendis sed cupiditate beatae alias minima rem molestias dolore error aliquid, ex deserunt omnis eos qui distinctio praesentium eveniet voluptas temporibus! <br> </p>
+                    </div>
+                    <img src="files/shave-brush.jpg" alt="52 anos de experiência">
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
