service area added

--- a/index.html
+++ b/index.html
@@ -95,5 +95,35 @@
             </div>
         </div>
     </section>
+
+    <section class="services">
+        <div class="container">
+            <h2>Nossos Serviços</h2>
+            <img src="files/heading-ic.png" alt="Nossos Serviços">
+
+            <div class="boxes">
+                <div class="box">
+                    <img src="files/classic-cut.png" alt="Classic Cut">
+                    <h4>Lorem ipsum</h4>
+                    <img src="files/head-line-ic.png" alt="separador">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, minima nobis eum, nulla sint vitae et, voluptate repudiandae voluptatem repellendus voluptatum? Pariatur sunt quaerat inventore fuga, in impedit aperiam explicabo.</p>
+                </div> 
+
+                <div class="box">
+                    <img src="files/clipper-cut.png" alt="Clipper Cut">
+                    <h4>Lorem ipsum</h4>
+                    <img src="files/head-line-ic.png" alt="separador">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, minima nobis eum, nulla sint vitae et, voluptate repudiandae voluptatem repellendus voluptatum? Pariatur sunt quaerat inventore fuga, in impedit aperiam explicabo.</p>
+                </div> 
+
+                <div class="box">
+                    <img src="files/razoe-shaver.png" alt="Razoe Shaver">
+                    <h4>Lorem ipsum</h4>
+                    <img src="files/head-line-ic.png" alt="separador">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, minima nobis eum, nulla sint vitae et, voluptate repudiandae voluptatem repellendus voluptatum? Pariatur sunt quaerat inventore fuga, in impedit aperiam explicabo.</p>
+                </div> 
+            </div>
+        </div>
+    </section>
 </body>
 </html>
