appointment and gallery added

--- a/index.html
+++ b/index.html
@@ -125,5 +125,78 @@
             </div>
         </div>
     </section>
+
+    <section class="appointment">
+        <div class="container">
+            <h2> Faça um Agendamento </h2>
+            <img src="files/heading-ic-white.png" alt="Faça um Agendamento">
+
+            <form>
+                <div class="personal-data">
+
+                    <div class="input-wrapper">
+                        <label for="">Nome</label>
+                        <input type="text" placeholder="Digite o seu Nome:">
+                    </div>
+
+                    <div class="input-wrapper">
+                        <label for="">Email</label>
+                        <input type="text" placeholder="Digite o seu Email:">
+                    </div>
+
+                    <div class="input-wrapper">
+                        <label for="">Telefone</label>
+                        <input type="text" placeholder="Digite o seu Telefone:">
+                    </div>
+
+                    <div class="input-wrapper">
+                        <label for="">Tipo de Serviço</label>
+                        <select>
+                            <option value=""> Cortar o Cabelo </option>
+                            <option value=""> Cortar o Cabelo e Barba</option>
+                        </select>
+                    </div>
+                </div>
+
+                <div class="input-wrapper">
+                    <label for="">Mensagem</label>
+                    <textarea></textarea>
+                </div>
+
+                <button>Enviar</button>
+            </form>
+        </div>
+    </section>
+
+    <section class="gallery">
+        <div class="container">
+            <h2> Galeria de Fotos </h2>
+            <img src="files/heading-ic.png" alt="Galeria de Fotos">
+        </div> 
+
+        <div class="gallery-wrapper">
+            <div>
+                <img src="files/gallery-img1.png" alt="Galeria">
+            </div>
+            <div>
+                <img src="files/gallery-img2.png" alt="Galeria">
+            </div>
+            <div>
+                <img src="files/gallery-img3.png" alt="Galeria">
+            </div>
+            <div>
+                <img src="files/gallery-img4.png" alt="Galeria">
+            </div>
+            <div>
+                <img src="files/gallery-img5.png" alt="Galeria">
+            </div>
+            <div>
+                <img src="files/gallery-img6.png" alt="Galeria">
+            </div>
+            <div>
+                <img src="files/gallery-img7.png" alt="Galeria">
+            </div>
+        </div>
+    </section>    
 </body>
 </html>
