--- a/index.html
+++ b/index.html
@@ -10,30 +10,30 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <section class="home">
+    <section id="home" class="home">
         <header class="header">
             <nav class="nav">
                 <ul>
                     <li>
-                        <a href="#">home</a>
+                        <a href="#home">home</a>
                     </li>
                     <li>
-                        <a href="#">Sobre</a>
+                        <a href="#about">Sobre</a>
                     </li>
                     <li>
-                        <a href="#">Serviços</a>
+                        <a href="#services">Serviços</a>
                     </li>
                     <li>
                         <img src="files/logo.png" alt="Logo Barber Shop" class="logo">
                     </li>
                     <li>
-                        <a href="#">Galeria</a>
+                        <a href="#gallery">Galeria</a>
                     </li>
                     <li>
-                        <a href="#">Agendamento</a>
+                        <a href="#appointment">Agendamento</a>
                     </li>
                     <li>
-                        <a href="#">Localização</a>
+                        <a href="#location">Localização</a>
                     </li>
                 </ul>
             </nav>
@@ -46,7 +46,7 @@
         </div>
     </section>
 
-    <section class="about">
+    <section id="about" class="about">
         <div class="container">
             <div class="timing">
                 
@@ -96,7 +96,7 @@
         </div>
     </section>
 
-    <section class="services">
+    <section id="services" class="services">
         <div class="container">
             <h2>Nossos Serviços</h2>
             <img src="files/heading-ic.png" alt="Nossos Serviços">
@@ -126,7 +126,7 @@
         </div>
     </section>
 
-    <section class="appointment">
+    <section id="appointment" class="appointment">
         <div class="container">
             <h2> Faça um Agendamento </h2>
             <img src="files/heading-ic-white.png" alt="Faça um Agendamento">
@@ -152,8 +152,10 @@
                     <div class="input-wrapper">
                         <label for="">Tipo de Serviço</label>
                         <select>
+                            <option value=""> Selecione </option>
                             <option value=""> Cortar o Cabelo </option>
-                            <option value=""> Cortar o Cabelo e Barba</option>
+                            <option value=""> Cortar o Cabelo e a Barba</option>
+                            <option value=""> Fazer a sobrancelha </option>
                         </select>
                     </div>
                 </div>
@@ -168,7 +170,7 @@
         </div>
     </section>
 
-    <section class="gallery">
+    <section id="gallery" class="gallery">
         <div class="container">
             <h2> Galeria de Fotos </h2>
             <img src="files/heading-ic.png" alt="Galeria de Fotos">
@@ -198,5 +200,59 @@
             </div>
         </div>
     </section>    
+
+    <section id="location" class="location">
+        <div class="container">
+            <div class="head">
+                <div class="info">
+                    <div class="icon">
+                        <img src="files/map-img1.png" alt="Localização" srcset="">
+                    </div>
+                    <div class="text">
+                        <span>Localização</span>
+                        <span>Rua da Matrix, 33 </span>
+                    </div>
+                </div>
+
+                <div class="info">
+                    <div class="icon">
+                        <img src="files/map-img2.png" alt="Localização" srcset="">
+                    </div>
+                    <div class="text">
+                        <span>Telefone</span>
+                        <span>(11) 9999-9999</span>
+                    </div>
+                </div>
+
+                <div class="info">
+                    <div class="icon">
+                        <img src="files/map-img3.png" alt="Localização" srcset="">
+                    </div>
+                    <div class="text">
+                        <span>E-mail</span>
+                        <span>contato@barbershop.com</span>
+                    </div>
+                </div>
+
+                <div class="info">
+                    <div class="icon">
+                        <img src="files/map-img4.png" alt="Localização" srcset="">
+                    </div>
+                    <div class="text">
+                        <span>Horários</span>
+                        <span>Seg. à Sex. 9AM às 17PM </span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="map">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.075426745302!2d-46.653426585542995!3d-23.56573436763772!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce59c8da0aa315%3A0xd59f9431f2c9776a!2sAv.%20Paulista%20-%20Bela%20Vista%2C%20S%C3%A3o%20Paulo%20-%20SP!5e0!3m2!1spt-BR!2sbr!4v1673440902899!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </div>
+    </section>
+
+    <footer class="footer">
+        2023 Barber Shop - Todos os direitos reservados
+    </footer>
 </body>
 </html>
